[POST]BalanceIncrease route created
