# internal/models/api_return.go
@@ -1,0 +1,7 @@
+package models
+
+type APIReturn struct {
+	StatusCode   int
+	Response     string
+	ResponseTime int64
+}
